Done with static pages

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,5 @@
-<h1>Pages#about</h1>
-<p>Find me in app/views/pages/about.html.erb</p>
+<h1>About us</h1>
+<p>
+	Sample Ruby on Rails application to demonstrate how to get posts from sms messages and display them on
+	the web.
+</p>
