--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,3 +2,5 @@
 <p>
 	This is the home page for the SMS Posts application.
 </p>
+
+<%= link_to "Sign up now", '#', :class => "signup_button round" %>
