--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,1 +1,15 @@
-<%= @user.name %>, <%= @user.email %>
+<table border="0" cellspacing="5" cellpadding="5" class="profile">
+	<tr>
+		<td class="main">
+			<h1>
+				<%= gravatar_for @user %>
+				<%= @user.name %>
+			</h1>
+		</td>
+		<td class="sidebar round">
+			<strong>Name</strong> <%= @user.name %><br />
+			<strong>URL</strong>  <%= link_to user_path(@user), @user %>
+		</td>
+	</tr>
+</table>
+
